src/rules/tryceratops/snapshots/ruff__rules__tryceratops__tests__error-instead-of-exception_TRY400.py.snap
---
source: src/rules/tryceratops/mod.rs
expression: diagnostics
---
- kind:
    ErrorInsteadOfException: ~
  location:
    row: 15
    column: 8
  end_location:
    row: 15
    column: 45
  fix: ~
  parent: ~
- kind:
    ErrorInsteadOfException: ~
  location:
    row: 18
    column: 12
  end_location:
    row: 18
    column: 49
  fix: ~
  parent: ~
- kind:
    ErrorInsteadOfException: ~
  location:
    row: 25
    column: 8
  end_location:
    row: 25
    column: 44
  fix: ~
  parent: ~
- kind:
    ErrorInsteadOfException: ~
  location:
    row: 28
    column: 12
  end_location:
    row: 28
    column: 48
  fix: ~
  parent: ~
- kind:
    ErrorInsteadOfException: ~
  location:
    row: 35
    column: 8
  end_location:
    row: 35
    column: 49
  fix: ~
  parent: ~
- kind:
    ErrorInsteadOfException: ~
  location:
    row: 38
    column: 12
  end_location:
    row: 38
    column: 53
  fix: ~
  parent: ~

