src/rules/tryceratops/snapshots/ruff__rules__tryceratops__tests__reraise-no-cause_TRY200.py.snap
---
source: src/rules/tryceratops/mod.rs
expression: diagnostics
---
- kind:
    ReraiseNoCause: ~
  location:
    row: 17
    column: 8
  end_location:
    row: 17
    column: 34
  fix: ~
  parent: ~
- kind:
    ReraiseNoCause: ~
  location:
    row: 20
    column: 12
  end_location:
    row: 20
    column: 38
  fix: ~
  parent: ~

