src/rules/tryceratops/snapshots/ruff__rules__tryceratops__tests__try-consider-else_TRY300.py.snap
---
source: src/rules/tryceratops/mod.rs
expression: diagnostics
---
- kind:
    TryConsiderElse: ~
  location:
    row: 18
    column: 8
  end_location:
    row: 18
    column: 13
  fix: ~
  parent: ~
