src/rules/tryceratops/snapshots/ruff__rules__tryceratops__tests__verbose-raise_TRY201.py.snap
---
source: src/rules/tryceratops/mod.rs
expression: diagnostics
---
- kind:
    VerboseRaise: ~
  location:
    row: 20
    column: 14
  end_location:
    row: 20
    column: 15
  fix: ~
  parent: ~

